@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.23 2006/06/06 21:11:29 joerg Exp $
+$NetBSD: distinfo,v 1.24 2006/07/31 00:16:26 reinoud Exp $
 
-SHA1 (UDFclient.0.5.1.tgz) = ef37e30c106a04f9fc4cc022fe377a25cddf2e1e
-RMD160 (UDFclient.0.5.1.tgz) = ef8570dc0974c1c9cf06c7c5bfcf59a7f518d91b
-Size (UDFclient.0.5.1.tgz) = 227322 bytes
+SHA1 (UDFclient.0.5.2.tgz) = 01033625579d855f6f87e536fb240ff4258cf1e0
+RMD160 (UDFclient.0.5.2.tgz) = f5a28882458fda6d16e4eb032b5422d7c8e1f842
+Size (UDFclient.0.5.2.tgz) = 228318 bytes
 SHA1 (patch-aa) = 8862b35d49bb8615522cc3b762dd81b6667a1611
